--- a/arch/arm64/boot/dts/qcom/xiaomi/longcheer/whyred/whyred-camera-sensor-mtp.dtsi
+++ b/arch/arm64/boot/dts/qcom/xiaomi/longcheer/whyred/whyred-camera-sensor-mtp.dtsi
@@ -57,6 +57,8 @@
 		regulator-max-microvolt = <1200000>;
 		enable-active-high;
 		gpio = <&pm660l_gpios 4 0>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&cam_sensor_eldo4_default>;
 		vin-supply = <&pm660_s5>;
 	};
 };
