--- a/arch/arm64/boot/dts/qcom/xiaomi/longcheer/whyred/whyred-camera-sensor-mtp.dtsi
+++ b/arch/arm64/boot/dts/qcom/xiaomi/longcheer/whyred/whyred-camera-sensor-mtp.dtsi
@@ -57,17 +57,11 @@
 		regulator-max-microvolt = <1200000>;
 		enable-active-high;
 		gpio = <&pm660l_gpios 4 0>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&cam_sensor_eldo4_default>;
 		vin-supply = <&pm660_s5>;
 	};
 };
 
 &cci {
-	/delete-node/ qcom,actuator@0;
-	/delete-node/ qcom,actuator@1;
-	/delete-node/ qcom,actuator@2;
-
 	actuator0: qcom,actuator@0 {
 		cell-index = <0>;
 		reg = <0x0>;
@@ -434,8 +428,7 @@ eeprom3: qcom,eeprom@3 {
 		qcom,gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk1_active
-				 &cam_sensor_front_active
-				 &cam_sensor_eldo3_default>;
+				 &cam_sensor_front_active>;
 		pinctrl-1 = <&cam_sensor_mclk1_suspend
 				 &cam_sensor_front_suspend>;
 		gpios = <&tlmm 33 0>,
@@ -491,8 +484,7 @@ eeprom3: qcom,eeprom@3 {
 		qcom,gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk1_active
-				 &cam_sensor_front_active
-				 &cam_sensor_eldo3_default>;
+				 &cam_sensor_front_active>;
 		pinctrl-1 = <&cam_sensor_mclk1_suspend
 				 &cam_sensor_front_suspend>;
 		gpios = <&tlmm 33 0>,
@@ -546,8 +538,7 @@ eeprom3: qcom,eeprom@3 {
 		qcom,gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cam_sensor_mclk1_active
-				 &cam_sensor_front_active
-				 &cam_sensor_eldo3_default>;
+				 &cam_sensor_front_active>;
 		pinctrl-1 = <&cam_sensor_mclk1_suspend
 				 &cam_sensor_front_suspend>;
 		gpios = <&tlmm 33 0>,
